# contact-methods-demo

./: LICENSE  README.md  pyproject.toml
notebooks/: bouncing_ball_nonsmooth.ipynb  bouncing_ball_penalty.ipynb
