[project]
name = "contact-methods-demo"
version = "0.1.0"
description = "Notebooks exploring bouncing ball models (penalty and nonsmooth)."
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.4",
  "plotly>=5.0",
  "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
extend-include = ["*.ipynb"]
